# ComputerGraphicsProject

./: .gitignore  CMakeLists.txt  ComputerGraphicsProjectSln.sln  Doxyfile  LICENSE  README.md  annotated.html  annotated_dup.js  application.cpp  application2.cpp  application_8cpp.html  application_8cpp.js  application_8cpp_source.html  camera_8h.html  camera_8h_source.html  classcamera-members.html  classcamera.html  classcamera.js  classes.html  classmat-members.html  classmat.html  classmat.js  classsynced__stream-members.html  classsynced__stream.html  classsynced__stream.js  classthread__pool-members.html  classthread__pool.html  classthread__pool.js  classtimer-members.html  classtimer.html  classtimer.js  core_8h.html  core_8h.js  core_8h_source.html  dir_eb1463819d84903762eb6f59cc0c4383.html  dir_eb1463819d84903762eb6f59cc0c4383.js  dir_fd25d433dfaa1f59a60cf4565dadaac0.html  dir_fd25d433dfaa1f59a60cf4565dadaac0.js  drawable_8h.html  drawable_8h.js  (+137 more)
.github/workflows/: main.yml
Application/: .clang-format  Application.vcxproj  Application.vcxproj.filters  application.cpp  node.cpp
Application/include/: camera.h  core.h  drawable.h  engine.h  engine1.h  material.h  maths.h  model.h  node.h  pointLight.h  thread_pool.hpp  transformations.h
include/: camera.h  camera2.h  engine.h  helpers.h  maths.h  transformations.h
res/: Stupa3.mtl  box.mtl  sword.mtl  texturedSquare.mtl
res/Crate/: Crate1.blend  Crate1.mtl
res/Football/: Football_HighPoly.mtl  Football_LowPoly.mtl
res/city/: city_debug.mtl  city_with_lamp.mtl  (+8 more)
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  defines_0.js  defines_1.js  defines_2.js  (+70 more)
src/: application.cpp  helpers.cpp
(+16 files in other folders)
